2009-01-14  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-CM8060_Color_MFP.xml: Fixed Foomatic ID (Bug #294).

	* printer/Canon-LBP-3360.xml: Fixed "gutenprint" entry in the driver
	  lis (Bug #295).

	* printer/Canon-imageRunner_5000.xml,
	  printer/Canon-imageRunner_6000.xml: Fixed "lj4dith" entry in
	  driver list (Bug #293).

2009-01-13  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/mj500c.xml, driver/mj6000c.xml, driver/mj700v2c.xml,
	  driver/mj8000c.xml: Added warning that the MachJet drivers in
	  current Ghostscript are
	  broken (http://bugs.ghostscript.com/show_bug.cgi?id=689595) and
	  a call to users of printers which are listed as supported only
	  by these drivers to check whether there are alternative
	  drivers. Marked "mj6000c" and "mj8000c" as obsolete with
	  Gutenprint as recommended replacement.

2009-01-12  Till Kamppeter <till.kamppeter@gmail.com>

	* acinclude.m4: Eliminated warnings when generating ./configure

	* printer/Xerox-WorkCentre_24.xml,
	  printer/Xerox-WorkCentre_7228.xml: added new printers following
	  the PPDs in the foomatic-db-nonfree package.

	* printer/Xerox-DocuPrint_N2125PS.xml,
	  printer/Xerox-DocuPrint_N2125.xml,
	  printer/Xerox-DocuPrint_N3225PS.xml,
	  printer/Xerox-DocuPrint_N3225.xml,
	  printer/Xerox-DocuPrint_N4025PS.xml,
	  printer/Xerox-DocuPrint_N4025.xml,
	  printer/Xerox-DocuPrint_N4525PS.xml,
	  printer/Xerox-DocuPrint_N4525.xml,
	  printer/Xerox-Phaser_6120PS.xml, printer/Xerox-Phaser_6120.xml,
	  db/oldprinterids: Renamed printer entries following the PPDs in
	  the foomatic-db-nonfree package.

	* printer/Lexmark-C520.xml, printer/Lexmark-C522.xml,
	  printer/Lexmark-C524.xml, printer/Lexmark-E350d.xml,
	  printer/Lexmark-E352dn.xml, printer/Oce-cm2520.xml,
	  printer/Tektronix-Phaser_750DP.xml,
	  printer/Tektronix-Phaser_750DX.xml,
	  printer/Tektronix-Phaser_750N.xml,
	  printer/Tektronix-Phaser_750P.xml,
	  printer/Tektronix-Phaser_850DP.xml,