@@ -15,15 +15,18 @@
    </mechanism>
    <url></url>
    <lang>
-      <pcl level="6"/>
+      <pcl level="5e"/>
       <!--no pjl-->
       <!--no "text"-->
    </lang>
    <functionality>A</functionality>
-   <driver>pxlmono</driver>
+   <driver>hpijs</driver>
    <drivers>
      <driver>
-       <id>pxlmono</id>
+       <id>ljet4</id>
+     </driver>
+     <driver>
+       <id>ljet4d</id>
      </driver>
      <driver>
        <id>lj4dith</id>
@@ -31,9 +34,14 @@
    </drivers>
    <comments>
       <en>
-      Foomatic entry made by PPDtoXML T/G 0.19 on 2008-09-03
 
-      You can use this printer using PCL5 language. Pressing the "Print" button on the printer (when the printer is idle) you will get a technical sheet regarding the printer's internal settings. 
+      Foomatic entry made by PPDtoXML T/G 0.19 on 2008-09-03&lt;p&gt;
+
+      You can use this printer using the PCL 5e language. Pressing the
+      "Print" button on the printer (when the printer is idle) you
+      will get a technical sheet regarding the printer's internal
+      settings.&lt;p&gt;
+
       </en>
    </comments>
 </printer>
