@@ -1,3 +1,7 @@
+2009-01-16  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Lexmark-E120.xml: Corrected driver list (bug #298).
+
 2009-01-14  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/HP-CM8060_Color_MFP.xml: Fixed Foomatic ID (Bug #294).
